...
    } finally {
      setDeleting(false);
    }
  }

  return (
    <View style={styles.container} testID="delete-account-view">
      <Text style={styles.title}>Delete account</Text>
      <Text style={styles.text}>
        Warning: you are attempting to delete your account. This will delete all
        data associated with your account, including but not limited to your
        book reviews, book reading status, friends list, and more. Are you sure
        you want to continue?
...
          title="Yes, I'm sure I want to delete my account"
        />
      </View>
      <View style={{ paddingTop: 20, alignItems: "center" }}>
        {!deleting ? (
          <Button
            testID="delete-account-button"
            onPress={() => {
              setDeleting(true);
              deleteAccount();
            }}
            color={"red"}
            containerStyle={{ borderRadius: 30 }}
...
