...
  }

  return (
    <ProfileContext.Provider value={navigation}>
      <View style={{ flex: 1 }}>
        <ScrollView
          testID="profile-tab-scroll-view"
          style={{ flex: 1 }}
          bounces={false}
          contentContainerStyle={styles.scrollViewStyle}
          showsVerticalScrollIndicator={false}
        >
          <ManageProfile navigation={navigation} />
...
          <Divider />

          <View
            style={{ paddingTop: 20, paddingBottom: 50, alignItems: "center" }}
          >
            <Button
              testID="profile-tab-delete-account-button"
              onPress={navigateDeleteAccount}
              color={"red"}
              containerStyle={{ borderRadius: 30 }}
            >
              <Text
                style={{
...
