...
      <BottomBar.Screen
        name="profile"
        component={Profile}
        options={{
          tabBarIcon: ({ color }) => (
            <Icon
              testID="navbar-profile-screen"
              name="person-circle"
              size={Dimensions.NAVBAR_ICON_SIZE}
              color={color}
            />
          ),
        }}
...
